# system_space

./: .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: system_space.dart
linux/: CMakeLists.txt  system_space_plugin.cc
linux/include/system_space/: system_space_plugin.h
linux/test/: system_space_plugin_test.cc
macos/: system_space.podspec
macos/Classes/: SystemSpacePlugin.swift
windows/: CMakeLists.txt  system_space_plugin.cpp  system_space_plugin.h  system_space_plugin_c_api.cpp
windows/include/system_space/: system_space_plugin_c_api.h
windows/test/: system_space_plugin_test.cpp
